--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
-			<!--<version>8.0.21</version>-->
+			<version>8.0.37</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
