--- a/pom.xml
+++ b/pom.xml
@@ -96,8 +96,8 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<!-- <scope>runtime</scope> -->
-			<version>8.0.27</version>
+			<scope>runtime</scope>
+                      <!--<version>8.0.27</version> -->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
